--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,7 +11,7 @@ on:
 env:
   resourcegroup: mcw-lab-nick-rg
   containerregistry: mcwlabnick.azurecr.io
-  registryusername: mcwworkshop
+  registryusername: http://mcwworkshop
   imagename: mcwlabnick.azurecr.io/tailspintoys/web
   
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
